<resources>
    <string name="app_name">ScanDemo</string>
    <string name="menu_settings">Settings</string>
    <string name="test_image">Test Image</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="some_error">Data not available.\\nPlease try later!</string>
    <string name="finger_image">Finger Image</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="place_your_left_thumb_on_the_scanner">Place your left thumb on the scanner</string>
    <string name="error_open_scanner_device">Can\'t open scanner device</string>
    <string name="error_user_deny_scanner_device">User deny scanner device</string>
    <string name="msg_wsq_file_saved">Saved as a wsq file</string>
    <string name="error_fail_save_scanner_image">Failed to convert the image!</string>
    <string name="refresh">Refresh</string>
    <string name="title_onboard">Onboarding</string>
    <string name="title_attendance">Attendance</string>
    <string name="caption_first_name">First Name:</string>
    <string name="caption_last_name">Last Name:</string>
    <string name="caption_email">Email:</string>
    <string name="hint_edittext_position">Enter Position</string>
    <string name="hint_edittext_last_name">Enter Last Name</string>
    <string name="hint_edittext_first_name">Enter First Name</string>
    <string name="button_onboard">OnBoard</string>
    <string name="button_attendance">Attendance</string>
    <string name="text_abuja_branch">Abuja Branch</string>
    <string name="text_enugu_branch">Enugu Branch</string>
</resources>
