<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageFinger"
        android:layout_width="320dp"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="500dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/finger_image"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="500dp" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="168dp"
        android:text="@string/scan"
        app:layout_constraintStart_toEndOf="@+id/imageFinger"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/btnScan"
        app:layout_constraintEnd_toEndOf="@+id/btnScan"
        app:layout_constraintStart_toStartOf="@+id/btnScan" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/btnScan"
        app:layout_constraintStart_toStartOf="@+id/btnScan"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/place_your_left_thumb_on_the_scanner"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageFinger"
        app:layout_constraintStart_toStartOf="@+id/imageFinger"
        app:layout_constraintTop_toBottomOf="@+id/imageFinger" />

</android.support.constraint.ConstraintLayout>
