<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.futronictech.ui.OnBoardingActivity">

    <TextView
    android:id="@+id/caption_first_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    style="@style/TextAppearance.AppCompat.Body1"
    android:textStyle="bold"
    android:textSize="24sp"
    android:text="@string/caption_first_name"
    tools:text="First Name:"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text_first_name"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/caption_first_name"
        app:layout_constraintLeft_toRightOf="@id/caption_first_name"
        app:layout_constraintTop_toTopOf="@id/caption_first_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Obinna"/>

    <TextView
        android:id="@+id/caption_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/caption_last_name"
        tools:text="Last Name:"
        app:layout_constraintTop_toBottomOf="@id/caption_first_name"
        app:layout_constraintLeft_toLeftOf="@id/caption_first_name"/>

    <TextView
        android:id="@+id/text_last_name"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/caption_last_name"
        app:layout_constraintBottom_toBottomOf="@id/caption_last_name"
        app:layout_constraintLeft_toRightOf="@id/caption_last_name"
        tools:text="Ogbonna"/>

    <TextView
        android:id="@+id/caption_email"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/caption_email"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/caption_last_name"
        app:layout_constraintLeft_toLeftOf="@id/caption_last_name"
        tools:layout_editor_absoluteY="144dp"
        tools:text="Email:" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/caption_email"
        app:layout_constraintBottom_toBottomOf="@id/caption_email"
        app:layout_constraintLeft_toRightOf="@id/caption_email"
        tools:text="oogbonna@byteworks.com.ng"/>

    <TextView
        android:id="@+id/caption_gender"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/caption_email"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/caption_email"
        app:layout_constraintLeft_toLeftOf="@id/caption_email"
        tools:layout_editor_absoluteY="144dp"
        tools:text="Gender:" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/caption_gender"
        app:layout_constraintBottom_toBottomOf="@id/caption_gender"
        app:layout_constraintLeft_toRightOf="@id/caption_gender"
        tools:text="Male"/>

    <ImageView
        android:id="@+id/image_finger_print"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place your right thumb on the scanner"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/image_finger_print"
        app:layout_constraintLeft_toLeftOf="@id/image_finger_print"
        app:layout_constraintTop_toBottomOf="@id/image_finger_print"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
